= Changelog
:toc: macro
ifdef::env-github[]
:toc-title:
:tip-caption: :bulb:
:note-caption: :bulb:
:important-caption: :heavy_exclamation_mark:
:caution-caption: :fire:
:warning-caption: :warning:
endif::[]

ifdef::env-github[]
[discrete]
== Contents
endif::[]
toc::[]

== HEAD

== v2.1.0 - 2019-10-02

*   Support `audio/*` with `--allow-content-audio` flag (similar to how video
    is handled)
*   Additional metrics datapoints when using `--metrics`
*   Support only go 1.13, due to use of new error wrapping semantics
*   Improve client connection early abort handling
*   Improve max response side handling -- only read MaxSize KB from any
    upstream server. Note: This may result in partial responses to clients for
    chunked encoding requests that are longer than MaxSize, as there is no way
    to signal the client other than closing the connection.
*   Change default of `--max-size` to 0, as previously chunked encoding
    responses bypassed size restrictions (only content-length was previously
    enforced). To avoid unexpected failures (preserve backwards compatibility
    in this regard), set max-size to 0 by default moving forward. Previous
    default was 5mb (use `--max-size=5120` to set to previous default).

== v2.0.1 - 2019-09-12

*   Slightly optimize some structure layouts to reduce memory overhead.
*   Switch htrie node map from uint8 to uint32, due to go map optimizations.
    See commit bbf7b9ffee83 for more info.
*   Update man page generation (makefile) to use asciidoctor.
    Not only is this easier to maintain, but it has the nice property of being
    rendered on github.

== v2.0.0 - 2019-09-08

*   Remove `--allow-list` flag, and replace with a unified filtering flag
    `filter-ruleset`. See link:man/go-camo-filtering.5.adoc[go-camo-filtering(5)]
    for more information on the accepted syntax.
*   Update man pages.
*   Refactor some internals (remove some regex in favor of a trie like data
    structure for some comparisons)
